Trying to update my site

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ small formatting changes are needed in the resume and the button for contact me 
 <div id="resumeMailTo">
     <h2>Mailing Address</h2>
     <address>
-        123 Main St.<br>
+        123 Main St<br>
         Durham, NC 27777
     </address>
 </div>
